--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/MonsterKingdom")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="MonsterKingdomGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/SunTemple/SunTemple.SunTemple
+GameDefaultMap=/Game/Maps/SunTemple/SunTemple.SunTemple
+GlobalDefaultGameMode=/Game/Blueprints/MonsterKingdom_Gamemode_BP.MonsterKingdom_Gamemode_BP_C
+
